third_party/rust/cxx/v1/crate/tests/ui/extern_type_lifetime_bound.stderr
error: lifetime parameter with bounds is not supported yet
 --> $DIR/extern_type_lifetime_bound.rs:4:26
  |
4 |         type Complex<'a, 'b: 'a>;
  |                          ^^^^^^
