third_party/rust/cxx/v1/crate/tests/ui/extern_type_lifetime_bound.rs
#[cxx::bridge]
mod ffi {
    extern "C++" {
        type Complex<'a, 'b: 'a>;
    }
}

fn main() {}
